Fixed word-wrapping in view recipe page

--- a/app/imports/ui/stylesheets/style.css
+++ b/app/imports/ui/stylesheets/style.css
@@ -120,5 +120,5 @@ padding-bottom:20px;
 
 
 .pre {
-  white-space: pre;
+  white-space: pre-wrap;
 }
